--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -10,10 +10,10 @@
                 
                     <div class="acceso justify-content-end">
                         <input  placeholder="Buscar canción, Banda, etc"/>
-                        <button (click)="login()" *ngIf="!loged()" class="btn-success">Acceder</button>
+                        <button (click)="login()" *ngIf="!loggedVerified()" class="btn-success">Acceder</button>
         
-                        <button *ngIf="loged()" class="btn-secondary">Usuario</button>
-                        <button (click)="signout()" *ngIf="loged()==true" class="btn-danger">Cerrar Sesión</button> 
+                        <button routerLink="/profile" *ngIf="loggedVerified()" class="btn-secondary">{{user.username || user.displayName}}</button>
+                        <button (click)="logout()" *ngIf="loggedVerified()==true" class="btn-danger">Cerrar Sesión</button> 
                     </div>
                 
                 
