--- a/src/app/components/grupos/grupos.component.html
+++ b/src/app/components/grupos/grupos.component.html
@@ -6,12 +6,14 @@
             <div class="disco">
                 <img  class="portada" src="{{item.foto}}" alt="novedad" width="100%">
                 <div class="titulo">{{item.nombre}}</div>
+                
             </div>
         </div>
        
             <div class=" col-md-12 col-xl-6">
                {{item.bio}}
-            </div>
+               <div  class="position-sticky-bottom">estilos:{{item.estiloMusical}}</div>
+               </div>
         
 
         <hr class="mt-4 mb-4">
