--- a/src/app/components/tablon/tablon.component.html
+++ b/src/app/components/tablon/tablon.component.html
@@ -1,6 +1,6 @@
 <div class="container col-12">
     <!-- Botton modal-->
-    <button  class="add btn btn-success  mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo"><img src="https://image.flaticon.com/icons/png/512/2052/2052655.png"></button>
+    <button  class="add btn btn-primary rounded-circle mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo"><img src="https://image.flaticon.com/icons/png/512/2052/2052655.png"></button>
     
     <!--Modal-->
         <div   class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
