--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -3,35 +3,34 @@
     
         <div class="row">
             <div class="cabecera">
+                
                 <img routerLink="/" src="../assets/guitar2.png"  alt="logo" [routerLink]="['/']">
                 <span routerLink="/" class="titulo">dMusic</span>
 
                
-                
-                    <div class="acceso justify-content-end">
-                        <input  placeholder="Buscar canción, Banda, etc"/>
-                        <button (click)="login()" *ngIf="!loggedVerified()" class="btn-success">Acceder</button>
-        
-                        <button routerLink="/profile" *ngIf="loggedVerified()" class="btn-secondary">{{user.username || user.displayName}}</button>
-                        <button (click)="logout()" *ngIf="loggedVerified()==true" class="btn-danger">Cerrar Sesión</button> 
-                    </div>
+                <div class="acceso col-6 ">
+                    <input  placeholder="Buscar canción, Banda, etc"/>
+                    <button (click)="login()" *ngIf="!loggedVerified()" class="btn-success">Acceder</button>
+    
+                    <button routerLink="/profile" *ngIf="loggedVerified()" class="btn btn-primary border border-dark">{{user.username || user.displayName}}</button>
+                    <button (click)="logout()" *ngIf="loggedVerified()==true" class="btn btn-danger border border-dark">Cerrar Sesión</button> 
+                </div>
+                   
                 
                 
             </div>
 
-    
+            
             
                 
-            <!--md es para el tipo de patannal del dispositivo, mb margin bottom-->
+            <!--md es para el tipo de patalla del dispositivo, mb margin bottom-->
             <div class="row">
                 <!--cada con col-xxl-2,decimos cuando la pantalla sea grande cada boton ocupara 2/12, cuando sea mediana md-6, ocupara 6/12 ...-->
                 <button routerLink="/estilos" [routerLinkActive]="['RutaEsperada']"  class="menu col-xxl-3 col-md-6 col-sm-12">Estilos</button>
                 <button routerLink="/grupos" [routerLinkActive]="['RutaEsperada']" class="menu col-xxl-3 col-md-6 col-sm-12">Grupos</button>
                 <button routerLink="/eventos" [routerLinkActive]="['RutaEsperada']" class="menu col-xxl-3 col-md-6 col-sm-12">Eventos</button>
                 <button routerLink="/tablon" [routerLinkActive]="['RutaEsperada']"  class="menu col-xxl-3 col-md-6 col-sm-12">Tablon</button>
-                <!--<button  class="menu col-xxl-2 col-md-6 col-sm-12">Salas</button>
-                <button  class="menu col-xxl-2 col-md-6 col-sm-12">Tienda</button>
-                -->
+                
 
             </div>
               
