--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,17 @@
-<p>profile works!</p>
+<input placeholder="Nombre del usuario">
+<input placeholder="foto">
+<input placheholder="descripción">
+<div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+    <label class="form-check-label" for="flexCheckDefault">
+      Jazz
+    </label>
+  </div>
+  <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+    <label class="form-check-label" for="flexCheckChecked">
+      Rock
+    </label>
+  </div>
+
+  <button (click)="createGroup()">Crear Grupo</button>
