--- a/src/app/components/cabecera/cabecera.component.html
+++ b/src/app/components/cabecera/cabecera.component.html
@@ -5,7 +5,7 @@
             <div class="cabecera">
                 
                 <img routerLink="/" src="../assets/guitar2.png"  alt="logo" [routerLink]="['/']">
-                <span routerLink="/" class="titulo">dMusic</span>
+                <span routerLink="/" class="titulo">dMussic</span>
 
                
                 <div class="acceso col-6 ">
