--- a/src/app/components/tablon/tablon.component.html
+++ b/src/app/components/tablon/tablon.component.html
@@ -15,7 +15,7 @@
                 <div class="mb-3">
                   <!-- label permite hacer focus (señalar un campo al hacer click al label de manera
                     que cuando toque titulo se marcara el input), se asocia con "for" en este caso el label se ha asocaido al input de abajo
-                  mediante el id-->
+                  mediante el id, form cControlName es lo que recoge el valor, por decir así la variable-->
                   <label for="recipient-name"  class="text-dark col-form-label">Titulo:</label>
                   <input type="text" class="form-control" formControlName="titulo" id="recipient-name">
                 </div>
@@ -27,26 +27,37 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-              <button type="button"  class="btn btn-primary">Añadir</button>
+              <button (click)="createPostit()" type="button"  class="btn btn-primary">Añadir</button>
             </div>
           </div>
         </div>
       </div>
 
   <!-- Tablon-->
-    <ul>
+  <div class="row" >
+    <div class="nota" *ngFor="let postit of allPostit">
+      <ul >
         <li>
           <a href="#">
-            <h2>Título #1</h2>
-            <p>Contenido #1</p>
+            <h2>{{postit.titulo}}</h2>
+            <p>{{postit.contenido}}</p>
           </a>
         </li>
-        <li>
-          <a href="#">
-            <h2>Título #2</h2>
-            <p>Contenido #2</p>
-          </a>
-        </li>
+      </ul>
+    </div>
+  </div>
+    
+      <!--
+      <li>
+        <a href="#">
+          <h2>{{postit.titulo}}</h2>
+          <p>{{postit.contenido}}</p>
+        </a>
+      </li>
+    
+  </div>
+    
+        
         <li>
           <a href="#">
             <h2>Título #3</h2>
@@ -88,6 +99,6 @@
             <h2>Título #8</h2>
             <p>Contenido #8</p>
           </a>
-        </li>
-      </ul>
+        </li>-->
+      
 </div>
