--- a/src/app/components/cabecera/cabecera.component.scss
+++ b/src/app/components/cabecera/cabecera.component.scss
@@ -41,6 +41,13 @@
                     border:none;
                     padding:10px;
                     margin-right:30px;
+                    font-size:20px;
+                }
+
+                .perfilActivado{
+                    background-color:rgba(29, 134, 219, 0.822);
+                    text-decoration: none;   
+                    font-size:27px;
                 }
                 
             }
