--- a/src/app/miniprofile/miniprofile.component.html
+++ b/src/app/miniprofile/miniprofile.component.html
@@ -16,3 +16,18 @@
         </div>
 </div>
 {{user.name}}-->
+
+
+<div class="row"> 
+    <div class="galeria-fotos col-6">
+        <h2>Galería de imágenes</h2>
+        thrhsrhtrthehsrthsrgsergeg
+        <p>{{myGroup}}</p>
+    </div>
+
+        <div class="galeria-videos col-6">
+            <h2>Galería de videos</h2>
+            dfadsfasdfdasfasfgfdsgsdfgsgfsfgsgssfdsgfdsfsdfgsfdgsfdgs
+        </div>
+
+</div>
