--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -1,1 +1,6 @@
-<p>eventos works!</p>
+<div class="container">
+    <div class="row"col-10>
+        <img class=" justify-content-center" src="../../assets/construction.jpg" alt="construccion" width="100%">
+
+    </div>
+</div>
